--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  background-image: url("./img/bg.png");
+  background-size: contain;
+  margin: 0 0;
+  overflow: hidden;
+  background-repeat: repeat-x;
 }
 
 code {
