--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 body {
   height: 100vh;
   background-image: url("./img/bg.png");
+  background-size: contain;
+  margin: 0 0;
+  overflow: hidden;
+  background-repeat: no-repeat;
 }
 
 code {
