--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,21 @@
+
+@keyframes slide {
+  from { background-position: 0 0; }
+  to { background-position: 0 600px; }
+}
+
 body {
   height: 100vh;
-  background-image: url("./img/bg.png");
-  background-size: contain;
+  width: 100vw;
+  
+  background: url("./img/WebBg201.png") repeat 0 0;
+  background-position: top bottom;
+  background-size: contain , contain;
   margin: 0 0;
-  
-  
+  width: 100%;
+  text-align: center;
+  box-sizing: border-box;
+  animation: slide 20s linear infinite;
 }
 
 code {
