--- a/src/Components/Test.css
+++ b/src/Components/Test.css
@@ -1,20 +1,13 @@
+body {
+  background-color: lightgreen;
+}
 
-  .hero-bkg-animated {
-    background: gray url(https://subtlepatterns.com/patterns/geometry2.png) repeat 0 0;
-    width: 100%;
-    margin: 0;
-    text-align: center;
-    height: 300px;
-    padding-top: 120px;
-    box-sizing: border-box;
-    animation: slide 20s linear infinite;
-  }
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
   
-  .hero-bkg-animated h1 {
-    font-family: sans-serif;
   }
-  
-  @keyframes slide {
-      from { background-position: 0 0; }
-      to { background-position: 0 400px; }
+  p{
+    color: red;
   }
+}
