--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -1,3 +1,26 @@
+.balloon > img{
+    
+        animation: moveBaloon 2s ease-in infinite;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+    
+}
+
+@keyframes moveBaloon {
+    25% {
+        top: -1vh;
+    }
+    50% {
+        top: -2vh;
+    }
+    75% {
+        top: -1vh;
+    }
+    100% {
+        top: 0vh;
+    }
+}
 
 
 .Hangman{
@@ -11,13 +34,28 @@
     justify-content: center;
 }
 
+.button-alpha{
+    height: 50px;
+    font-weight: 700;
+    border-radius: 100%;
+    border: none;
+    font-size: 25px;
+}
+
+.button-alpha:hover{
+    background-color: rgba(128, 128, 128, 0.548);
+}
+
+
+
 .words{
     text-align: center;
     display: grid;
     align-items: center;
     justify-content: center;
-    grid-gap: 20px;    
-    grid-template-columns: repeat(13,auto);
+    grid-gap: 5px;
+    grid-template-columns: repeat(9,35px);
+    grid-template-rows: repeat(3,55px);
 }
 
 .score{
@@ -41,11 +79,7 @@
     grid-template-columns: 100%;
     grid-row: auto auto;
 }
-img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
+
 
 
 
@@ -56,7 +90,9 @@ img{
         display: grid;
         align-items: center;
         justify-content: center;
-        grid-gap: 10px;    
-        grid-template-columns: repeat(4,auto);
+        grid-gap: 5px;    
+        grid-template-columns: repeat(9,35px);
+        grid-template-rows: repeat(3,55px);
+        font-size: 27px;
     }
   }
