--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -95,4 +95,7 @@
         grid-template-rows: repeat(3,55px);
         font-size: 27px;
     }
+    .button-alpha{
+        background-color: white;
+    }
   }
