--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -99,3 +99,71 @@
         background-color: white;
     }
   }
+
+  .typewriter-text1 {
+  animation-name: typewriter1;
+}
+
+.typewriter-text2 {
+  animation-name: typewriter2;
+}
+
+.typewriter-text1,
+.typewriter-text2 {
+  overflow: hidden;
+  white-space: nowrap;
+  display: inline-block;
+  position: relative;
+  animation-duration: 20s;
+  animation-timing-function: steps(25, end);
+  animation-iteration-count: infinite;
+}
+
+.typewriter-text1::after,
+.typewriter-text2::after {
+  
+  content: "|";
+  position: absolute;
+  right: 0;
+  animation: caret infinite;
+  animation-duration: 1s;
+  animation-timing-function: steps(1, end);
+}
+
+@keyframes typewriter1 {
+  0%,
+  50%,
+  100% {
+    width: 0;
+  }
+  10%,
+  40% {
+    width: 17em;
+  }
+}
+
+@keyframes typewriter2 {
+  0%,
+  50%,
+  100% {
+    width: 0;
+  }
+
+  60%,
+  90% {
+    width: 17em;
+  }
+}
+
+@keyframes caret {
+  0%,
+  100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+.rodal-dialog{
+    background-color: skyblue;
+}
