--- a/src/App.css
+++ b/src/App.css
@@ -168,4 +168,13 @@
 }  
 }
 
+.bg{
+  background-image: url("./img/mobilebgland.png");
+  background-position: bottom;
+  background-repeat: repeat-x;
+  background-size: auto 420px;
+  height: 100vh;
+  margin-bottom: 0px;
+  width: 100vw;
+}
 
