--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-
+*{
+  margin: 0;
+  padding: 0;
+}
 @keyframes slide {
   from { background-position: 0 0; }
   to { background-position: 0 600px; }
@@ -8,7 +11,7 @@ body {
   height: 100vh;
   width: 100vw;
   background: url("./img/WebBg201.png") repeat 0 0;
-  background-position: top bottom;
+  background-position: right bottom, left top;
   background-size: contain , contain;
   margin: 0 0;
   width: 100%;
