--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 
 .wel__text{
   margin-top: 50px;
-  font-size: 2em;
+  font-size: 30px;
   /* background-color: red; */
   font-weight: 500;
   text-align: center;
@@ -172,9 +172,22 @@
   background-image: url("./img/mobilebgland.png");
   background-position: bottom;
   background-repeat: repeat-x;
-  background-size: auto 420px;
+  background-size: auto 780px;
   height: 100vh;
   margin-bottom: 0px;
   width: 100vw;
+  animation: slide 10s infinite;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slide {
+  
+  from { 
+  background-position: bottom;  
+  }
+  to { 
+    top:1000px;
+  }
 }
 
