--- a/src/index.css
+++ b/src/index.css
@@ -2,22 +2,15 @@
   margin: 0;
   padding: 0;
 }
-@keyframes slide {
-  from { background-position: 0 0; }
-  to { background-position: 0 600px; }
-}
+
 
 body {
+  font-family: sans-serif;
   height: 100vh;
   width: 100vw;
-  background: url("./img/WebBg201.png") repeat 0 0;
-  background-position: right bottom, left top;
-  background-size: contain , contain;
-  margin: 0 0;
-  width: 100%;
+  background: url("./img/mobilebgsky.png") 0 0;
   text-align: center;
-  box-sizing: border-box;
-  animation: slide 20s linear infinite;
+  background-size: contain;
 }
 
 code {
