--- a/src/App.css
+++ b/src/App.css
@@ -201,3 +201,13 @@
   }
 }
 
+.cloud__class{
+  background: url("./img/mobilebgsky.png");
+  animation: slide 8s linear infinite;
+}
+
+
+@keyframes slide {
+  from { background-position: 0 0; }
+  to { background-position: 0 600px; }
+}
