--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   font-family: sans-serif;
   height: 100vh;
   width: 100vw;
-  background: url("./img/mobilebgsky.png") 0 0;
+  /* background: url("./img/mobilebgsky.png") 0 0; */
   text-align: center;
   background-size: contain;
 }
