--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -126,7 +126,7 @@
     }
     .button-alpha{
         background-color: #ffffff;
-        font-weight: bold;
+        font-weight: 600;
     }
   }
 
