--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -1,3 +1,4 @@
+
 .balloon > img{
     
         position: relative;
@@ -64,9 +65,11 @@
 }
 
 .button-alpha{
-  background: #ffffff;
-    /* font-weight: ; */
-    border-radius: 100%;
+  font-weight: 800;
+  background: white;
+  height: 40px;
+  align-items: center;
+    border-radius: 99px;
     border: none;
     font-size: 25px;
 }
@@ -125,6 +128,7 @@
         font-size: 27px;
     }
     .button-alpha{
+      
         background-color: #ffffff;
         font-weight: 600;
     }
@@ -216,4 +220,23 @@
 }
 .scroll-bg{
   animation: slide 20s linear infinite;
+}
+.submit-button{
+  background: #ffffff;
+  border: black solid;
+  margin-top: 5px;
+  padding: 3px;
+  color: black;
+  font-weight:700;
+  width: 150px;
+  height: 40px;
+  transition: all .35s;
+
+  border-radius: 99px;
+}
+
+.submit-button:hover{
+    background: black;
+    color: #fff;
+
 }
