--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -67,15 +67,22 @@
 .button-alpha{
   font-weight: 800;
   background: white;
-  height: 40px;
+  height: 37px;
   align-items: center;
     border-radius: 99px;
     border: none;
     font-size: 25px;
+    transition: 100ms all ease;
 }
 
 .button-alpha:hover{
-    background-color: rgba(128, 128, 128, 0.548)
+    height: 45px;
+    width: 40px;
+    color: white;
+    font-size: xx-large;
+    background-color: black;
+    z-index: 5;
+    /* background-color: rgba(128, 128, 128, 0.548) */
 }
 
 
