--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -38,11 +38,6 @@
     animation: mover 1s infinite  alternate;
 }
 
-.balloon > img{
-  
-  -webkit-animation: mover 1s infinite  alternate;
-  animation: mover 1s infinite  alternate;
-}
 
 @-webkit-keyframes mover {
   0% { transform: translateY(0); }
@@ -65,9 +60,10 @@
 }
 
 .button-alpha{
-  font-weight: 800;
+  font-weight: 700;
   background: white;
   height: 37px;
+  width: 40px;
   align-items: center;
     border-radius: 99px;
     border: none;
@@ -92,9 +88,9 @@
     display: grid;
     align-items: center;
     justify-content: center;
-    grid-gap: 5px;
-    grid-template-columns: repeat(9,55px);
-    grid-template-rows: repeat(3,55px);
+    /* grid-gap: 5px; */
+    grid-template-columns: repeat(9,45px);
+    grid-template-rows: repeat(3,45px);
 }
 
 .score{
@@ -109,14 +105,7 @@
 }
 
 .maingrid{
-    display: grid;
-    grid-template-columns: 100%;
-}
-
-.center{
-    display: grid;
-    grid-template-columns: 100%;
-    grid-row: auto auto;
+  /* border: red solid; */
 }
 
 
@@ -161,52 +150,8 @@
   border-radius: 20px;
   background-color: rgba(211, 211, 211, 0.3)
 }
-.typewriter-text1,
-.typewriter-text2 {
-  overflow: hidden;
-  white-space: nowrap;
-  display: inline-block;
-  position: relative;
-  animation-duration: 20s;
-  animation-timing-function: steps(25, end);
-  animation-iteration-count: infinite;
-}
 
-.typewriter-text1::after,
-.typewriter-text2::after {
-  
-  content: "|";
-  position: absolute;
-  right: 0;
-  animation: caret infinite;
-  animation-duration: 1s;
-  animation-timing-function: steps(1, end);
-}
 
-@keyframes typewriter1 {
-  0%,
-  50%,
-  100% {
-    width: 0;
-  }
-  10%,
-  40% {
-    width: 17em;
-  }
-}
-
-@keyframes typewriter2 {
-  0%,
-  50%,
-  100% {
-    width: 0;
-  }
-
-  60%,
-  90% {
-    width: 17em;
-  }
-}
 
 @keyframes caret {
   0%,
