--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: sans-serif;
-  background: url("./img/mobilebgsky.png");
+  /* background: url("./img/mobilebgsky.png"); */
   text-align: center;
   background-position: bottom;
 }
