--- a/src/Components/Test.css
+++ b/src/Components/Test.css
@@ -1,14 +1,27 @@
+html,
 body {
-  background-color: lightgreen;
+  height: 100%;
 }
 
-@media only screen and (max-width: 600px) {
-  body {
-    background-color: lightblue;
-  
-  }
-  p{
-    color: red;
-  }
+body {
+  color: #222;
+  background: #ededed;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.3;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+
+canvas {
+  border: 1px solid silver;
+  background: white;
+    cursor: -webkit-grab;
+  display: block;
 }
 
