--- a/src/Components/MainScreen/MainScreen.css
+++ b/src/Components/MainScreen/MainScreen.css
@@ -1,6 +1,28 @@
-body {
-    font-family: sans-serif;
-    background: url("../../img/mobilebgsky.png");
-    text-align: center;
-    background-position: bottom;
-  }
+
+.wel__text{
+  /* margin-top: 50px; */
+  font-size: 30px;
+  /* background-color: red; */
+  font-weight: 500;
+  text-align: center;
+}
+.cloud__class__1{
+  background: url("../../img/mobilebgsky.png");
+}
+
+.app-bg{
+  background-image: url("../../img/mobilebgland.png");
+  background-position: bottom;
+  background-repeat: repeat-x;
+  background-size: auto 780px;
+  height: 100vh;
+  margin-bottom: 0px;
+  width: 100vw;
+  
+}
+
+.balloon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
