--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
 *{
   margin: 0;
   padding: 0;
-}
-
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  text-align: center;
+  font-family: monospace;
 }
