--- a/src/Components/MainScreen/MainScreen.css
+++ b/src/Components/MainScreen/MainScreen.css
@@ -26,3 +26,20 @@
   justify-content: center;
   align-items: center;
 }
+#buttonContainer {
+  height: 4vh;
+  margin: 6vh auto;
+}
+
+#sp {
+  font-size: 25px;
+  font-weight: 600;
+  height: 8vh;
+  margin: auto;
+  line-height: 50px;
+  text-align: center;
+  color: #64c4f0;
+  background-color: #fffafa;
+  border-radius: 20px;
+  cursor: pointer;
+}
