--- a/src/Components/Level4/Level4.css
+++ b/src/Components/Level4/Level4.css
@@ -1,3 +1,29 @@
+
+.bg{
+  background-image: url("../../img/mobilebgland.png");
+  background-position: bottom;
+  background-repeat: repeat-x;
+  background-size: auto 780px;
+  height: 100vh;
+  margin-bottom: 0px;
+  width: 100vw;
+  animation: slide 10s infinite;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+
+ .cloud__class{
+  width: 100%;
+  background: url("../../img/mobilebgsky.png") repeat 0 0;
+  animation: slide 8s linear infinite;
+  box-sizing: border-box;
+}
+@keyframes slide {
+  from { background-position: 0 600px; }
+  to { background-position: 0 0; }
+}
+
 .submit-button1{
   background: black;
   border: black solid;
@@ -36,10 +62,9 @@
 }
 
 .balloon > img{
-    
-        position: relative;
-        margin-left: auto;
-        margin-right: auto;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 .wrong{
@@ -68,6 +93,45 @@
   border-radius: 40px;
   background-color: rgba(211, 211, 211, 0.2)
 }
+
+
+@keyframes parachute {
+  0% {
+      transform: rotate(40deg)
+                 translate(0, 150px);
+              
+    }
+  
+    30% {
+      transform: 
+                  rotate(-20deg)
+                 translate(50px, 250px);
+    }
+    60% {
+      transform: 
+                  rotate(20deg)
+                 translate(100px, 300px); 
+    }
+    
+    90% {
+      transform: 
+        rotate(0deg)
+      translate(155px, 355px);
+    }
+  /*  100% {
+      transform: 
+        translate(155px, 355px);
+    }*/
+  }
+  
+  .test {
+    /* position: absolute; */
+    animation: parachute 5s ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+  }
+
+
+
 
 .balloon > img{
   -webkit-animation: mover 1s infinite  alternate;
@@ -216,10 +280,7 @@
     background-color: skyblue;
 }
 
-@keyframes slide {
-  from { background-position: 0 0; }
-  to { background-position: 0 600px; }
-}
+
 .scroll-bg{
   animation: slide 20s linear infinite;
 }
