--- a/src/Components/Level5/Level5.css
+++ b/src/Components/Level5/Level5.css
@@ -62,10 +62,9 @@
 }
 
 .balloon > img{
-    
-        position: relative;
-        margin-left: auto;
-        margin-right: auto;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 .wrong{
@@ -94,6 +93,45 @@
   border-radius: 40px;
   background-color: rgba(211, 211, 211, 0.2)
 }
+
+
+@keyframes parachute {
+  0% {
+      transform: rotate(40deg)
+                 translate(0, 150px);
+              
+    }
+  
+    30% {
+      transform: 
+                  rotate(-20deg)
+                 translate(50px, 250px);
+    }
+    60% {
+      transform: 
+                  rotate(20deg)
+                 translate(100px, 300px); 
+    }
+    
+    90% {
+      transform: 
+        rotate(0deg)
+      translate(155px, 355px);
+    }
+  /*  100% {
+      transform: 
+        translate(155px, 355px);
+    }*/
+  }
+  
+  .test {
+    /* position: absolute; */
+    animation: parachute 5s ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+  }
+
+
+
 
 .balloon > img{
   -webkit-animation: mover 1s infinite  alternate;
