--- a/src/Components/Level3/Level3.css
+++ b/src/Components/Level3/Level3.css
@@ -197,7 +197,7 @@
 }
 
 .questionBox {
-
+    height: auto;
     width: 60%;
     font-size: 20px;
     padding-top: 15px;
@@ -312,7 +312,7 @@
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
     top: 1vh;
-    height: 8vh;
+    height: auto;
     width: 90%;
     padding-top: 15px;
     margin: 0 auto 0 auto;
