--- a/src/Components/Level4/Level4.css
+++ b/src/Components/Level4/Level4.css
@@ -78,7 +78,7 @@
 }
 
 .questionBox {
-  
+  height: auto;
   width: 60%;
   font-size: 20px;
   padding-top: 15px;
@@ -195,7 +195,7 @@
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
   top: 1vh;
-  height: 8vh;
+  height: auto;
   width: 90%;
   padding-top: 15px;
   margin: 0 auto 0 auto;
